# Dancing-Cells-Sudoku

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  compile_commands.json  dc  dc2  main  tui
.cache/clangd/index/: dancingcells.c.31553299B33ACA1A.idx  dancingcells.h.CA983F52DF0A60F9.idx  graphics.c.65CB5E8F07E5F57C.idx  graphics.c.A6CD944663E90ED6.idx  graphics.h.262D69FDFFA399AC.idx  graphics.h.E05E7E427B4F3DC9.idx  main.c.589A3F0B0B7B28EE.idx  main.c.67DBC94EA309E7DA.idx  tui.c.39B767C7F42708EC.idx  tui.c.AAD251C28E288701.idx  tui.h.70A9ACB102E07F5A.idx  tui.h.C5BDF087906C7EC5.idx
include/: dancingcells.h  graphics.h  tui.h
src/: dancingcells.c  graphics.c  main.c  tui.c
